--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-relay": "^11.0.0",
     "react-scripts": "4.0.3",
     "relay-runtime": "^11.0.0",
+    "relay-test-utils": "^14.0.0",
+    "relay-test-utils-internal": "^14.0.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
